feat: Optimized Meta Descriptions for all 25 pages

--- a/Home/index.html
+++ b/Home/index.html
@@ -13,7 +13,7 @@
   <title>#1 Cleaning Services Midland TX | Top Janitorial & House Cleaners</title>
 
   <meta name="description"
-    content="Golden Grove Cleaning is the highest quality locally based cleaning company in Midland TX. Expert janitorial, maid service, house cleaning, post-remodel, and commercial cleaning. Call (432) 218-1700." />
+    content="Golden Grove Cleaning is Midland & Odessa's #1 rated cleaning service. We offer premium house cleaning, commercial janitorial, deep cleaning, and move-in/out services. Bonded & Insured." />
 
   <meta name="keywords"
     content="cleaning services midland tx, house cleaning midland tx, janitorial service midland tx, maid service midland tx, deep cleaning midland tx, move out cleaning midland tx, post construction cleaning midland tx, commercial cleaning midland tx, bonded and insured cleaners, pet-friendly cleaning, eco-friendly cleaning midland tx">
