--- a/about-midland-tx/index.html
+++ b/about-midland-tx/index.html
@@ -13,7 +13,7 @@
     <title>About Golden Grove Cleaning | #1 Cleaning Company in Midland TX</title>
 
     <meta name="description"
-        content="Learn more about Golden Grove Cleaning, Midland's premier local cleaning service. Family-owned, bonded, and insured. Meet the team dedicated to your home's sparkle." />
+        content="Learn about Golden Grove Cleaning, West Texas's leading woman-owned cleaning company. Discover our mission, our values, and why we are the top choice for Midland/Odessa." />
 
     <meta name="keywords"
         content="about golden grove cleaning, cleaning company midland tx, professional cleaners midland, local cleaning service midland, trusted cleaners midland tx, cleaning company history midland">
