--- a/airbnb-turnover-midland-tx/index.html
+++ b/airbnb-turnover-midland-tx/index.html
@@ -13,7 +13,7 @@
     <title>#1 Airbnb Turnover & Short-Term Rental Cleaning Midland TX</title>
 
     <meta name="description"
-        content="Professional Airbnb cleaning and turnover services in Midland TX. Five-star guest ready cleaning, linen service, and restock. Call (432) 218-1700." />
+        content="Fast & reliable Airbnb turnover cleaning in Midland, TX. We make your vacation rental guest-ready with linen service, restocking, and 5-star standard cleaning." />
 
     <meta name="keywords"
         content="airbnb cleaning midland tx, short term rental cleaning, vrbo cleaning midland, vacation rental cleaning, guest-ready cleaning, turnover service midland, rental property cleaners">
