--- a/andrews-tx-cleaning-services/index.html
+++ b/andrews-tx-cleaning-services/index.html
@@ -13,7 +13,7 @@
     <title>#1 Cleaning Services Andrews TX | Top-Rated Local Cleaners</title>
 
     <meta name="description"
-        content="Golden Grove Cleaning is Andrews TX's premier choice for house cleaning, maid services, and commercial janitorial. Professional, bonded, and local. Request a free quote today!" />
+        content="The best house cleaning and maid services in Andrews, TX. Reliable, background-checked cleaners dedicated to keeping your Andrews home spotless." />
 
     <meta name="keywords"
         content="cleaning services andrews tx, house cleaning andrews tx, maid service andrews tx, Andrews TX cleaners, office cleaning andrews, residential cleaning andrews">
