--- a/big-spring-tx-cleaning-services/index.html
+++ b/big-spring-tx-cleaning-services/index.html
@@ -13,7 +13,7 @@
     <title>#1 Cleaning Services Big Spring TX | Top-Rated Local Cleaners</title>
 
     <meta name="description"
-        content="Golden Grove Cleaning is Big Spring TX's premier choice for house cleaning, maid services, and commercial janitorial. Professional, bonded, and local. Request a free quote today!" />
+        content="Golden Grove brings professional cleaning to Big Spring, TX. Experienced local cleaners for residential homes and commercial businesses. Get a free quote!" />
 
     <meta name="keywords"
         content="cleaning services big spring tx, house cleaning big spring tx, maid service big spring tx, commercial cleaning big spring tx, office cleaning big spring, window cleaning big spring, Howard County cleaners">
