--- a/blog-midland-tx/index.html
+++ b/blog-midland-tx/index.html
@@ -13,7 +13,7 @@
     <title>Cleaning Tips & News Midland TX | Golden Grove Cleaning Blog</title>
 
     <meta name="description"
-        content="Expert cleaning tips, home maintenance advice, and Golden Grove Cleaning company news for Midland and Odessa families. Keeping the Permian Basin clean." />
+        content="Expert cleaning tips, local news, and home maintenance advice from Golden Grove Cleaning. Stay updated with the best practices for keeping your Midland home fresh." />
 
     <meta name="keywords"
         content="cleaning tips midland tx, house cleaning blog texas, home maintenance midland, golden grove cleaning news, professional cleaning advice, midland tx lifestyle">
