--- a/carpet-upholstery-cleaning-midland-tx/index.html
+++ b/carpet-upholstery-cleaning-midland-tx/index.html
@@ -13,7 +13,7 @@
     <title>#1 Carpet & Upholstery Cleaning Midland TX | Best Steam Cleaning</title>
 
     <meta name="description"
-        content="Professional carpet and upholstery cleaning in Midland TX. Deep steam cleaning, stain removal, and odor elimination. Revitalize your furniture and floors. Call (432) 218-1700." />
+        content="Revive your carpets and furniture with expert cleaning in Midland. Remove stains, odors, and pet dander with our professional carpet & upholstery services." />
 
     <meta name="keywords"
         content="carpet cleaning midland tx, upholstery cleaning midland, steam cleaning midland, rug cleaning midland, couch cleaning, stain removal midland, pet odor removal, professional carpet cleaners">
