--- a/commercial-janitorial-midland-tx/index.html
+++ b/commercial-janitorial-midland-tx/index.html
@@ -13,7 +13,7 @@
     <title>#1 Commercial Cleaning Midland TX | Best Janitorial & Office Service</title>
 
     <meta name="description"
-        content="Professional commercial cleaning and janitorial services in Midland TX. Custom office cleaning, medical facility sanitization, and retail janitorial. Bonded & Insured. Call (432) 218-1700." />
+        content="Reliable commercial cleaning & janitorial services in Midland/Odessa. Offices, medical facilities, and retail spaces. Licensed, bonded, and insured for your business." />
 
     <meta name="keywords"
         content="commercial cleaning midland tx, janitorial services midland tx, office cleaning midland, medical facility cleaning, industrial cleaning midland, retail space cleaning, best commercial cleaners">
