--- a/deep-cleaning-midland-tx/index.html
+++ b/deep-cleaning-midland-tx/index.html
@@ -13,7 +13,7 @@
     <title>#1 Deep Cleaning Midland TX | Best Detail Cleaning & Sanitization</title>
 
     <meta name="description"
-        content="Golden Grove Cleaning is the #1 rated deep cleaning service in Midland TX. Intensive detail cleaning, sanitization, and grime removal for homes. Bonded & Insured. Call (432) 218-1700." />
+        content="Experience the deepest clean for your Midland home. Our deep cleaning service removes hidden dust, allergens, and grime from top to bottom. Perfect for spring cleaning!" />
 
     <meta name="keywords"
         content="deep cleaning midland tx, detail cleaning midland tx, professional deep cleaners midland, sanitization service midland tx, home deep cleaning midland, best cleaning service midland texas, heavy duty cleaning">
