--- a/gallery-midland-tx/index.html
+++ b/gallery-midland-tx/index.html
@@ -13,7 +13,7 @@
     <title>Cleaning Results Gallery | Golden Grove Cleaning Midland TX</title>
 
     <meta name="description"
-        content="See the Golden Grove difference. Our gallery showcase professional house cleaning, deep cleaning, and commercial janitorial results in Midland and Odessa, TX." />
+        content="View our work! See before & after photos of our house cleaning, deep cleaning, and commercial projects in Midland and Odessa, TX." />
 
     <meta name="keywords"
         content="cleaning gallery midland tx, before and after cleaning texas, house cleaning photos midland, professional cleaners portfolio, janitorial service gallery">
