--- a/gardendale-tx-cleaning-services/index.html
+++ b/gardendale-tx-cleaning-services/index.html
@@ -13,7 +13,7 @@
     <title>#1 Cleaning Services Gardendale TX | Top House Cleaners</title>
 
     <meta name="description"
-        content="Golden Grove Cleaning offers professional house cleaning and maid services in Gardendale, TX. Trusted local cleaners for the Gardendale community. Request a free quote today!" />
+        content="Gardendale's choice for premium cleaning. We offer weekly and bi-weekly maid services to keep your Gardendale home beautiful and dust-free." />
 
     <meta name="keywords"
         content="cleaning services gardendale tx, house cleaning gardendale tx, maid service gardendale tx, Gardendale TX cleaners, residential cleaning gardendale">
