--- a/grassland-estates-tx-cleaning-services/index.html
+++ b/grassland-estates-tx-cleaning-services/index.html
@@ -13,7 +13,7 @@
     <title>#1 House Cleaning Grassland Estates TX | Best Maid Service</title>
 
     <meta name="description"
-        content="Golden Grove Cleaning offers top-rated house cleaning and maid services to Grassland Estates, TX. Trusted local cleaners for your family's home. Request a free quote today!" />
+        content="Trusted house cleaners for Grassland Estates. Join your neighbors in choosing Golden Grove for reliable, high-quality maid services." />
 
     <meta name="keywords"
         content="house cleaning grassland estates tx, maid service grassland estates tx, Grassland Estates cleaners, cleaning services midland tx, residential cleaning midland">
