--- a/green-tree-park-tx-cleaning-services/index.html
+++ b/green-tree-park-tx-cleaning-services/index.html
@@ -13,7 +13,7 @@
     <title>#1 Cleaning Services Green Tree Park TX | Professional Cleaners</title>
 
     <meta name="description"
-        content="Golden Grove Cleaning offers specialized house cleaning and maid services for the Green Tree Park neighborhood in Midland, TX. Premium quality you can trust. Request a quote today!" />
+        content="Green Tree Country Club area cleaning specialists. Premium home cleaning services designed for the discerning residents of Green Tree Park." />
 
     <meta name="keywords"
         content="cleaning services green tree park tx, house cleaning green tree park, Green Tree Park cleaners, maid service midland tx, residential cleaning green tree park">
