--- a/greenwood-tx-cleaning-services/index.html
+++ b/greenwood-tx-cleaning-services/index.html
@@ -13,7 +13,7 @@
     <title>#1 Cleaning Services Greenwood TX | Professional Maid Service</title>
 
     <meta name="description"
-        content="Golden Grove Cleaning offers premium house cleaning and maid services in Greenwood, TX. Trusted local cleaners for the Greenwood community. Request a free quote today!" />
+        content="Serving Greenwood, TX with exceptional home cleaning. Our local team provides deep cleaning, standard maintenance, and move-out services for Greenwood residents." />
 
     <meta name="keywords"
         content="cleaning services greenwood tx, house cleaning greenwood tx, maid service greenwood tx, Greenwood TX cleaners, residential cleaning greenwood">
