--- a/house-cleaning-midland-tx/index.html
+++ b/house-cleaning-midland-tx/index.html
@@ -13,7 +13,7 @@
     <title>#1 House Cleaning Midland TX | Best Maid Service & Home Cleaners</title>
 
     <meta name="description"
-        content="Golden Grove Cleaning is the #1 rated house cleaning service in Midland TX. Professional maid services, residential cleaning, and deep home cleaning. Bonded & Insured. Call (432) 218-1700." />
+        content="Top-rated house cleaning in Midland, TX. Our professional maids provide recurring weekly, bi-weekly, or monthly cleaning services tailored to your home's needs." />
 
     <meta name="keywords"
         content="house cleaning midland tx, maid service midland tx, home cleaning midland tx, professional house cleaners midland tx, residential cleaning midland tx, best house cleaning midland, cleaning service midland texas">
