--- a/locations-midland-tx/index.html
+++ b/locations-midland-tx/index.html
@@ -13,7 +13,7 @@
     <title>Service Areas | Cleaning Services in Midland, Odessa & Permian Basin</title>
 
     <meta name="description"
-        content="Golden Grove Cleaning serves the entire Permian Basin, including Midland, Odessa, Big Spring, Stanton, and Greenwood. Professional home and office cleaning near you." />
+        content="Golden Grove Cleaning serves the entire Permian Basin. Check our service areas including Midland, Odessa, Big Spring, Andrews, Greenwood, and more." />
 
     <meta name="keywords"
         content="cleaning services midland tx, cleaning services odessa tx, cleaning services big spring, cleaners greenwood tx, cleaners stanton tx, permian basin cleaning company, cleaning services near me">
