--- a/midland-tx-cleaning-services/index.html
+++ b/midland-tx-cleaning-services/index.html
@@ -13,7 +13,7 @@
     <title>#1 Cleaning Services Midland TX | Top-Rated Local Cleaners</title>
 
     <meta name="description"
-        content="Golden Grove Cleaning is Midland TX's premier choice for house cleaning, maid services, and commercial janitorial. Professional, bonded, and local. Request a free quote today!" />
+        content="Premier cleaning services in Midland, TX. Trusted by outstanding local homeowners for excellence in house cleaning, maid service, and janitorial solutions." />
 
     <meta name="keywords"
         content="cleaning services midland tx, house cleaning midland tx, maid service midland tx, commercial cleaning midland tx, office cleaning midland, window cleaning midland, deep cleaning midland texas">
