--- a/move-out-cleaning-midland-tx/index.html
+++ b/move-out-cleaning-midland-tx/index.html
@@ -13,7 +13,7 @@
     <title>#1 Move Out Cleaning Midland TX | Best Move In Cleaning Service</title>
 
     <meta name="description"
-        content="Professional move-out and move-in cleaning services in Midland TX. Get your full security deposit back with our detailed turnover cleaning. Bonded & Insured. Call (432) 218-1700." />
+        content="Guaranteed move-out cleaning in Midland & Odessa. We ensure you get your deposit back with our thorough move-in / move-out checklist. Landlord approved." />
 
     <meta name="keywords"
         content="move out cleaning midland tx, move in cleaning midland tx, apartment cleaning midland tx, rental turnover midland, end of lease cleaning midland, cleaning service for moving, best turnover cleaning">
