--- a/odessa-tx-cleaning-services/index.html
+++ b/odessa-tx-cleaning-services/index.html
@@ -13,7 +13,7 @@
     <title>#1 Cleaning Services Odessa TX | Top-Rated Local Cleaners</title>
 
     <meta name="description"
-        content="Golden Grove Cleaning is Odessa TX's premier choice for house cleaning, maid services, and commercial janitorial. Professional, bonded, and local. Request a free quote today!" />
+        content="Top-ranked cleaning services in Odessa, TX. Golden Grove delivers professional house cleaning and commercial janitorial services to the entire Odessa community." />
 
     <meta name="keywords"
         content="cleaning services odessa tx, house cleaning odessa tx, maid service odessa tx, commercial cleaning odessa tx, office cleaning odessa, window cleaning odessa, deep cleaning odessa texas">
