--- a/post-construction-cleaning-midland-tx/index.html
+++ b/post-construction-cleaning-midland-tx/index.html
@@ -13,7 +13,7 @@
     <title>#1 Post Construction Cleaning Midland TX | Best After-Build Service</title>
 
     <meta name="description"
-        content="Professional post-construction cleaning services in Midland TX. We remove fine dust, debris, and residues after renovation or new builds. Bonded & Insured. Call (432) 218-1700." />
+        content="Professional post-construction cleaning in Midland, TX. We remove drywall dust, debris, and construction residue to make your new build or remodel shine." />
 
     <meta name="keywords"
         content="post construction cleaning midland tx, construction cleanup midland, after build cleaning, dust removal services, new construction cleaning, renovation cleaning midland, builders clean">
