--- a/saddle-club-estates-tx-cleaning-services/index.html
+++ b/saddle-club-estates-tx-cleaning-services/index.html
@@ -13,7 +13,7 @@
     <title>#1 House Cleaning Saddle Club Estates TX | Top Maid Service</title>
 
     <meta name="description"
-        content="Golden Grove Cleaning provides specialized house cleaning and maid services for the Saddle Club Estates neighborhood in Midland, TX. Premium quality you can trust. Request a quote today!" />
+        content="Saddle Club Estates' favorite cleaning service. We provide consistent, high-standard housekeeping and deep cleaning for your beautiful home." />
 
     <meta name="keywords"
         content="house cleaning saddle club estates tx, maid service saddle club estates, Saddle Club Estates cleaners, cleaning services midland tx, residential cleaning midland">
