--- a/skyline-terrace-tx-cleaning-services/index.html
+++ b/skyline-terrace-tx-cleaning-services/index.html
@@ -13,7 +13,7 @@
     <title>#1 House Cleaning Skyline Terrace TX | Professional Maid Service</title>
 
     <meta name="description"
-        content="Golden Grove Cleaning offers top-rated house cleaning and maid services for the Skyline Terrace neighborhood in Midland, TX. Trusted local cleaners for your home. Request a free quote today!" />
+        content="Professional maid service in Skyline Terrace. Experience the Golden Grove difference with our thorough, reliable, and friendly cleaning team." />
 
     <meta name="keywords"
         content="house cleaning skyline terrace tx, maid service skyline terrace, Skyline Terrace cleaners, cleaning services midland tx, residential cleaning midland">
