--- a/stanton-tx-cleaning-services/index.html
+++ b/stanton-tx-cleaning-services/index.html
@@ -13,7 +13,7 @@
     <title>#1 Cleaning Services Stanton TX | Home & Office Cleaners</title>
 
     <meta name="description"
-        content="Golden Grove Cleaning is Stanton TX's premier choice for house cleaning and office janitorial services. Reliable, professional, and locally based. Request a free quote today!" />
+        content="Professional cleaning services available in Stanton, TX. From office janitorial to detailed house cleaning, Golden Grove is your trusted local partner." />
 
     <meta name="keywords"
         content="cleaning services stanton tx, house cleaning stanton tx, maid service stanton tx, Stanton TX cleaners, office cleaning stanton, residential cleaning stanton">
