--- a/window-cleaning-midland-tx/index.html
+++ b/window-cleaning-midland-tx/index.html
@@ -13,7 +13,7 @@
     <title>#1 Window Cleaning Midland TX | Best Professional Glass Washing</title>
 
     <meta name="description"
-        content="Professional streak-free window cleaning services in Midland TX. Crystal clear results for residential and commercial properties. Call (432) 218-1700." />
+        content="Crystal clear window cleaning for Midland homes and businesses. Interior and exterior window washing for a streak-free shine. Satisfaction guaranteed." />
 
     <meta name="keywords"
         content="window cleaning midland tx, window washing midland, professional window cleaners, streak free windows, screen cleaning midland, commercial window cleaning, residential window washing">
