--- a/old-midland-tx-cleaning-services/index.html
+++ b/old-midland-tx-cleaning-services/index.html
@@ -13,7 +13,7 @@
     <title>#1 House Cleaning Old Midland TX | Professional Maid Service</title>
 
     <meta name="description"
-        content="Golden Grove Cleaning provides premium house cleaning and maid services to the Old Midland neighborhood. Trusted local cleaners for your beautiful home. Request a quote today!" />
+        content="Specialized cleaning for Old Midland homes. We treat your historic or luxury property with the utmost care and attention to detail. Bonded & Insured." />
 
     <meta name="keywords"
         content="house cleaning old midland tx, maid service old midland tx, Old Midland cleaners, residential cleaning old midland, cleaning services midland texas">
